fixed wrap cards of mobile responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -368,7 +368,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 15px;
 }
 
@@ -467,7 +467,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap:  nowrap;
+    flex-wrap: wrap;
     gap: 15px;
     padding-top: 25px;
 }
